Tweak feature list

--- a/_layouts/features.html
+++ b/_layouts/features.html
@@ -133,7 +133,8 @@
                                 <li>Ray bias</li>
                                 <li>Light Near Start</li>
                                 <li>Max Ray Intensity</li>
-                                <li>Nested Dielectrics</li>
+                                <li>Nested dielectrics</li>
+                                <li>Automatic tracking of indices of refraction</li>
                                 <li>Dozens of diagnostic modes</li>
                             </ul>
                         </div>
