Tweak feature list

--- a/_layouts/features.html
+++ b/_layouts/features.html
@@ -152,10 +152,10 @@
                                 <li>Windows, Linux and OS X (64-bit)</li>
                                 <li>OBJ, Alembic, BinaryMesh (proprietary)</li>
                                 <li>OpenEXR, PNG</li>
-                                <li>OSL shaders</li>
-                                <li>Gaffer integration</li>
-                                <li>Maya integration</li>
-                                <li>Blender integration</li>
+                                <li>Full support for OpenShadingLanguage shaders</li>
+                                <li>Native Gaffer integration</li>
+                                <li>Maya 2015/2016 native plugin</li>
+                                <li>Blender Python plugin</li>
                             </ul>
                         </div>
                         <div class="block">
