Tweak feature list

--- a/_layouts/features.html
+++ b/_layouts/features.html
@@ -152,7 +152,7 @@
                                 <li>Windows, Linux and OS X (64-bit)</li>
                                 <li>OBJ, Alembic, BinaryMesh (proprietary)</li>
                                 <li>OpenEXR, PNG</li>
-                                <li>Full support for OpenShadingLanguage shaders</li>
+                                <li>Full support of OpenShadingLanguage</li>
                                 <li>Native Gaffer integration</li>
                                 <li>Maya 2015/2016 native plugin</li>
                                 <li>Blender Python plugin</li>
