--- a/_layouts/features.html
+++ b/_layouts/features.html
@@ -47,7 +47,7 @@
                                 <li>Oren-Nayar Microfacet BRDF</li>
                                 <li>Sheen BRDF</li>
                                 <li>Specular BRDF (perfect mirror)</li>
-                                <li>Specular BTDF (clear glass)</li>
+                                <li>Specular BSDF (clear glass)</li>
                                 <li>Ward Microfacet BRDF</li>
                                 <li>Blinn Microfacet BRDF</li>
                                 <li>GGX Microfacet BRDF</li>
@@ -153,9 +153,10 @@
                                 <li>OBJ, Alembic, BinaryMesh (proprietary)</li>
                                 <li>OpenEXR, PNG</li>
                                 <li>Full support of OpenShadingLanguage</li>
-                                <li>Native Gaffer integration</li>
-                                <li>Maya 2015/2016 native plugin</li>
-                                <li>Blender Python plugin</li>
+                                <li>Native Image Engine's Gaffer integration</li>
+                                <li>Autodesk Maya native plugin (WIP)</li>
+                                <li>Autodesk 3ds Max native plugin (WIP)</li>
+                                <li>Blender Python plugin (WIP)</li>
                             </ul>
                         </div>
                         <div class="block">
