--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -60,7 +60,9 @@
                     </div>
                 </div>
                 <div class="copyright">
-                    <p>Made with care &bull; Released under the <a href="http://en.wikipedia.org/wiki/MIT_License">MIT license</a>
+                    <p>The appleseed logo <img src="/img/appleseed-seeds-16-gray.png" style="vertical-align:-2px"> is designed by Paolo Berto (<a href="https://twitter.com/pberto">@pberto</a>)
+                    <br>
+                    Site and software released under the <a href="http://en.wikipedia.org/wiki/MIT_License">MIT license</a>
                     <br>
                     &copy; 2010-2016 The appleseedhq Organization</p>
                 </div>
