Add infrastructure section in features page

--- a/_layouts/features.html
+++ b/_layouts/features.html
@@ -164,7 +164,6 @@
                             <ul>
                                 <li>Fully open source, MIT license</li>
                                 <li>Exceptionally clean code</li>
-                                <li>CMake build system</li>
                                 <li>Full featured C++ API</li>
                                 <li>Full featured Python 2.x/3.x API</li>
                                 <li>More than 1300 built-in unit tests</li>
@@ -191,6 +190,18 @@
                                 <li>Command line renderer</li>
                                 <li>Dropbox-based render farm tools</li>
                                 <li>OSL compiler and tools</li>
+                            </ul>
+                        </div>
+                        <div class="block">
+                            <h3>Infrastructure</h3>
+                            <ul>
+                                <li>Git and GitHub for source control</li>
+                                <li>CMake build system</li>
+                                <li>Continuous Integration with Travis CI</li>
+                                <li>Slack team for developers and users chats</li>
+                                <li>Discourse forum for users</li>
+                                <li>Developer mailing list</li>
+                                <li>appleseedhq.net mail addresses</li>
                             </ul>
                         </div>
                     </div>
