Improve About page

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,6 +1,12 @@
 {% include header.html %}
 
-    <div class="section light team">
+    <div class="section light docs">
+        <div class="content">
+            {{ content }}
+        </div>
+    </div>
+
+    <div class="section dark team">
         <div class="content">
             <div class="group">
                 <h2>Core Team</h2>
