Improve styles in About page

--- a/css/styles.css
+++ b/css/styles.css
@@ -216,6 +216,7 @@ iframe
 .small-legend
 {
     margin-top: -15px;
+    margin-bottom: 40px;
     font-size: 12px;
     text-align: center;
     color: #888;
