--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -20,8 +20,8 @@
     <div class="section light team">
         <div class="content">
             <div class="group">
-                <h2>Contributors</h2>
-                {% for member in site.data.contributors %}
+                <h2>Active Contributors</h2>
+                {% for member in site.data.activecontributors %}
                     {% include member.html %}
                 {% endfor %}
             </div>
@@ -31,8 +31,8 @@
     <div class="section dark team">
         <div class="content">
             <div class="group">
-                <h2>External Projects</h2>
-                {% for member in site.data.externalprojects %}
+                <h2>Past Contributors</h2>
+                {% for member in site.data.pastcontributors %}
                     {% include member.html %}
                 {% endfor %}
             </div>
