Improve About page

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,6 +1,8 @@
 {% include header.html %}
+{% include illustrations.html %}
 
-    <div class="section light docs">
+    <!-- Reusing the Docs section for the About section -->
+    <div class="section light docs illustrated">
         <div class="content">
             {{ content }}
         </div>
