Remove redundant attributes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
              Navigation section.
              ==================== -->
 
-        <script type="text/javascript">
+        <script>
             $(window).load(function () {
                 var $window = $(window);
                 var $nav = $(".section.navigation");
