--- a/_includes/illustrations.html
+++ b/_includes/illustrations.html
@@ -1,4 +1,4 @@
-<script type="text/javascript">
+<script>
     $(window).load(function () {
         $(".section.illustrated img").replaceWith(function () {
             var $this = $(this);
