--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -22,7 +22,7 @@
                         <a class="button" id="download-link" href="#"><i class="fa fa-download"></i> Download</a>
                         <a class="version" href="{{ release.github }}">Current Version: {{ release.version }}</a>
 
-                        <script type="text/javascript">
+                        <script>
                             var platform = "";
 
                             if (navigator.appVersion.indexOf("Win") != -1) platform = "windows";
