Enable ECMAScript 5's strict mode

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,8 @@
 
         <div class="section dark footer">
             <script>
+                "use strict";
+
                 $(document).ready(function () {
                     $("#emailLink").click(function () {
                         $("#emailPopup").show();
