--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -23,6 +23,8 @@
                         <a class="version" href="{{ release.github }}">Current Version: {{ release.version }}</a>
 
                         <script>
+                            "use strict";
+
                             var platform = "";
 
                             if (navigator.appVersion.indexOf("Win") != -1) platform = "windows";
