--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,6 +34,8 @@
              ==================== -->
 
         <script>
+            "use strict";
+
             $(window).load(function () {
                 var $window = $(window);
                 var $nav = $(".section.navigation");
