Don't mention Alembic support since we temporarily removed it

--- a/_layouts/features.html
+++ b/_layouts/features.html
@@ -150,7 +150,7 @@
                             <h3>Interoperability</h3>
                             <ul>
                                 <li>Windows, Linux and OS X (64-bit)</li>
-                                <li>OBJ, Alembic, BinaryMesh (proprietary)</li>
+                                <li>OBJ, BinaryMesh (proprietary)</li>
                                 <li>OpenEXR, PNG</li>
                                 <li>Full support of OpenShadingLanguage</li>
                                 <li>Native Image Engine's Gaffer integration</li>
