--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>appleseed - {{ page.title }}</title>
-        <meta name="description" content="appleseed is a modern, open source, physically-based rendering engine designed to produce photorealistic images, animations and visual effects.">
+        <meta name="description" content="appleseed is an open source, physically-based global illumination rendering engine primarily designed for animation and visual effects.">
         <meta name="google-site-verification" content="r1TFSRu5lmeTvLyLBW_2AP-quCnivVxpG4CtM10etgc">
         <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
         <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans%7CInconsolata">
