Post news about 1.7.0-beta release

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,8 +1,7 @@
 {% include header.html %}
 {% include illustrations.html %}
 
-    <!-- Reusing the Docs section for the About section -->
-    <div class="section light docs illustrated">
+    <div class="section light illustrated">
         <div class="content">
             {{ content }}
         </div>
