--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,4 +1,5 @@
 {% include header.html %}
+{% include illustrations.html %}
 
     <!-- ====================
          Intro section.
@@ -61,7 +62,7 @@
          News section.
          ==================== -->
 
-    <div class="section light news">
+    <div class="section light news illustrated">
         <div class="content">
             {% for post in site.posts limit:1 %}
                 <article>
