--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,5 @@
 {% include header.html %}
+{% include illustrations.html %}
 
     <div class="section light {{ page.section }}">
         <div class="content">
