--- a/css/styles.css
+++ b/css/styles.css
@@ -381,6 +381,25 @@ th, tfoot td
 }
 
 /* ========================================================================
+ * Illustrated section.
+ * ======================================================================== */
+
+.section.illustrated .illustration
+{
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+
+.section.illustrated img
+{
+    display: block;
+    max-width: 768px;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 0px 0px 20px 5px #252525;
+}
+
+/* ========================================================================
  * Intro section.
  * ======================================================================== */
 
@@ -487,7 +506,7 @@ th, tfoot td
 .section.news article .date
 {
     margin-top: -10px;
-    padding-bottom: 40px;
+    margin-bottom: 40px;
     color: #888;
 }
 
@@ -712,21 +731,6 @@ th, tfoot td
 {
     font-size: 14px;
     text-align: left;
-}
-
-.section.docs .illustration
-{
-    margin-top: 60px;
-    margin-bottom: 60px;
-}
-
-.section.docs img
-{
-    display: block;
-    max-width: 768px;
-    margin-left: auto;
-    margin-right: auto;
-    box-shadow: 0px 0px 20px 5px #252525;
 }
 
 /* ========================================================================
