Update production features

--- a/_layouts/features.html
+++ b/_layouts/features.html
@@ -132,7 +132,9 @@
                                 <li>Automatic color space conversions</li>
                                 <li>Ray bias</li>
                                 <li>Light Near Start</li>
+                                <li>Low Light Threshold</li>
                                 <li>Max Ray Intensity</li>
+                                <li>Separate Bounce Limits</li>
                                 <li>Nested dielectrics</li>
                                 <li>Automatic tracking of indices of refraction</li>
                                 <li>Dozens of diagnostic modes</li>
