Replace appleseed-dev link by Slackin link in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,7 +35,7 @@
                         <ul class="column" id="contact">
                             <li class="header">Contact</li>
                             <li><a href="https://forum.appleseedhq.net/">User Forum</a></li>
-                            <li><a href="https://groups.google.com/forum/#!forum/appleseed-dev">Development Mailing List</a></li>
+                            <li><a href="https://slackin-pohcdrcgcs.now.sh/">Developer Slack</a></li>
                             <li>
                                 <a id="emailLink" href="#">Email</a>
                                 <div id="emailPopup">
