Cleanup download page + minor style tweaks

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -64,7 +64,7 @@
                 <div class="copyright">
                     <p>The appleseed logo <img src="/img/appleseed-seeds-16-gray.png" style="vertical-align:-2px"> is designed by Paolo Berto (<a href="https://twitter.com/pberto">@pberto</a>)
                     <br>
-                    Site and software released under the <a href="http://en.wikipedia.org/wiki/MIT_License">MIT license</a>
+                    Site and software released under the <a href="http://en.wikipedia.org/wiki/MIT_License">MIT license</a> - Assets released under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>
                     <br>
                     &copy; 2010-2017 The appleseedhq Organization</p>
                 </div>
