Update feature list

--- a/_layouts/features.html
+++ b/_layouts/features.html
@@ -25,7 +25,6 @@
                                 <li>Scene editing during rendering</li>
                                 <li>Spectral rendering (31 bands)</li>
                                 <li>RGB rendering</li>
-                                <li>Automatic spectral / RGB switching</li>
                             </ul>
                         </div>
                         <div class="block">
@@ -39,30 +38,40 @@
                                 <li>Support for SSS sets</li>
                             </ul>
                         </div>
+                        <div class="block">
+                            <h3>Volume Rendering</h3>
+                            <ul>
+                                <li>Single scattering</li>
+                                <li>Multiple scattering</li>
+                                <li>Homogeneous media</li>
+                                <li>Isotropic phase function</li>
+                                <li>Henyey-Greenstein phase function</li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="column right">
                         <div class="block">
                             <h3>Reflection Models</h3>
                             <ul>
                                 <li>Lambertian BRDF (purely diffuse)</li>
-                                <li>Oren-Nayar Microfacet BRDF</li>
-                                <li>Sheen BRDF</li>
                                 <li>Specular BRDF (perfect mirror)</li>
-                                <li>Specular BSDF (clear glass)</li>
+                                <li>Specular BSDF (clear transparency)</li>
+                                <li>Diffuse BTDF (diffuse transparency)</li>
+                                <li>Oren-Nayar Microfacet BRDF</li>
                                 <li>Ward Microfacet BRDF</li>
                                 <li>Blinn Microfacet BRDF</li>
                                 <li>GGX Microfacet BRDF</li>
-                                <li>Microfacet BTDF (rough glass)</li>
+                                <li>Disney's principled, layered BRDF</li>
                                 <li>Anisotropic Ashikhmin-Shirley BRDF</li>
                                 <li>Kelemen BRDF</li>
                                 <li>Glossy BRDF</li>
                                 <li>Physically-based metal BRDF</li>
                                 <li>Physically-based plastic BRDF</li>
                                 <li>Physically-based glass BSDF</li>
-                                <li>Disney's layered BRDF</li>
-                                <li>Velvet BRDF</li>
+                                <li>Sheen BRDF</li>
                                 <li>Arbitrary mixtures of BRDFs</li>
                                 <li>Highlight falloff control for several models</li>
+                                <li>Energy compensation in microfacet models</li>
                             </ul>
                         </div>
                         <div class="block">
@@ -107,7 +116,7 @@
                                 <li>Latitude-longitude environment maps</li>
                                 <li>Mirror-ball environment maps</li>
                                 <li>Preetham physically-based day sky</li>
-                                <li>Hosek & Wilkie physically-based day sky</li>
+                                <li>Hosek &amp; Wilkie physically-based day sky</li>
                                 <li>Physically-based sun</li>
                                 <li>Environment transforms</li>
                             </ul>
@@ -126,8 +135,9 @@
                         <div class="block">
                             <h3>Production Features</h3>
                             <ul>
-                                <li>Open Shading Language (OSL)</li>
+                                <li>Open Shading Language support (OSL)</li>
                                 <li>OSL shader library</li>
+                                <li>OpenColorIO support</li>
                                 <li>Disney's SeExpr expressions</li>
                                 <li>AOVs</li>
                                 <li>Hierarchical instancing</li>
@@ -166,6 +176,7 @@
                                 <li>Native Autodesk® 3ds Max® 2015+ plugin</li>
                                 <li>Native Autodesk® Maya® 2017+ plugin</li>
                                 <li>Excellent coverage of Maya shading nodes</li>
+                                <li>Blender 2.75+ plugin</li>
                             </ul>
                         </div>
                         <div class="block">
@@ -174,7 +185,9 @@
                                 <li>100% open source, MIT license</li>
                                 <li>Exceptionally clean, fully reviewed code</li>
                                 <li>Full featured C++ API</li>
+                                <li>Full extensibility via external C++ plugins</li>
                                 <li>Full featured Python 2.x/3.x API</li>
+                                <li>Embedded Python scripting</li>
                                 <li>More than 1300 built-in unit tests</li>
                                 <li>Hundreds of built-in performance tests</li>
                                 <li>Rich, automatic functional test suite</li>
@@ -190,6 +203,7 @@
                                 <li>Memory-bounded texture cache</li>
                                 <li>Multiple Importance Sampling</li>
                                 <li>Efficient handling of alpha maps</li>
+                                <li>Advanced many-light sampling</li>
                             </ul>
                         </div>
                         <div class="block">
@@ -209,7 +223,6 @@
                                 <li>Continuous Integration with Travis CI</li>
                                 <li>Slack team for developers</li>
                                 <li>Discourse forum for users</li>
-                                <li>Developer mailing list</li>
                                 <li>appleseedhq.net mail addresses</li>
                             </ul>
                         </div>
