Small updates: Slack->Discord, dates in copyright notices, etc.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,14 +34,14 @@
                     <div class="columns">
                         <ul class="column" id="contact">
                             <li class="header">Contact</li>
-                            <li><a href="https://forum.appleseedhq.net/">User Forum</a></li>
-                            <li><a href="https://slackin-pohcdrcgcs.now.sh/">Developer Slack</a></li>
+                            <li><a href="https://discord.gg/Vcu5A7h">Discord</a></li>
+                            <li><a href="https://forum.appleseedhq.net/">Forum</a></li>
                             <li>
                                 <a id="emailLink" href="#">Email</a>
                                 <div id="emailPopup">
                                     <div id="window">
-                                        <p>The <a href="https://forum.appleseedhq.net/">user forum</a> is the best place for most questions and inquiries.</p>
-                                        <p>You can also contact us privately at <a href="mailto:hello@appleseedhq.net">hello@appleseedhq.net</a> but you may not get an answer as quickly as on the forum.</p>
+                                        <p>Our <a href="https://discord.gg/Vcu5A7h">Discord server</a> or the <a href="https://forum.appleseedhq.net/">user forum</a> are the best places for most questions and inquiries.</p>
+                                        <p>You can also contact us privately at <a href="mailto:hello@appleseedhq.net">hello@appleseedhq.net</a> but you may not get an answer as quickly as on Discord or via the forum.</p>
                                         <p><div style="text-align: center"><a id="closeEmailPopupLink" href="#">Close</a></div></p>
                                     </div>
                                 </div>
@@ -66,7 +66,7 @@
                     <br>
                     Site and software released under the <a href="http://en.wikipedia.org/wiki/MIT_License">MIT license</a> - Assets released under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>
                     <br>
-                    &copy; 2010-2017 The appleseedhq Organization</p>
+                    &copy; 2010-2018 The appleseedhq Organization</p>
                 </div>
             </div>
         </div>
