--- a/_layouts/features.html
+++ b/_layouts/features.html
@@ -188,7 +188,7 @@
                                 <li>Full extensibility via external C++ plugins</li>
                                 <li>Full featured Python 2.x/3.x API</li>
                                 <li>Embedded Python scripting</li>
-                                <li>More than 1300 built-in unit tests</li>
+                                <li>More than 1400 built-in unit tests</li>
                                 <li>Hundreds of built-in performance tests</li>
                                 <li>Rich, automatic functional test suite</li>
                             </ul>
@@ -221,8 +221,8 @@
                                 <li>Git and GitHub for source control</li>
                                 <li>CMake build system</li>
                                 <li>Continuous Integration with Travis CI</li>
-                                <li>Slack team for developers</li>
-                                <li>Discourse forum for users</li>
+                                <li>Discord server</li>
+                                <li>Discourse forum</li>
                                 <li>appleseedhq.net mail addresses</li>
                             </ul>
                         </div>
